Fix logo & "first section" spacing, especially on narrow screens"

--- a/src/components/BTWFirstSection.css
+++ b/src/components/BTWFirstSection.css
@@ -10,25 +10,25 @@
 	/* Prevent overlap with leaves */
 	padding-bottom: calc(min(10vw, 100px));
 	margin-bottom: calc(min(10vw, 100px));
-	padding-top: 30vh !important;
+	padding-top: 80px !important;
 }
 
 #logos {
-	position: absolute;
 	top: 100px;
-	left: 50%; transform: translateX(-50%);
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 	flex-direction: row;
-	gap: 10em;
+	gap: calc(min(10em, 10vw));
+	width: 100%;
 
 	margin: auto;
 }
 
 #logos img {
 	flex-shrink: 1;
+	max-height: 20vw;
 }
 
 #first-section h1, #first-section h2 {
@@ -37,6 +37,7 @@
 }
 
 #first-section h1 {
+	margin-top: 3rem;
 	font-size: 3rem;
 	font-weight: 700;
 }
